--- a/tests/README
+++ b/tests/README
@@ -1,5 +1,6 @@
 DBCSR Testing and Performance
 
+(C) 2015-2018 Valery Weber, Urban Borstnik, Andreas Gloess, Alfio Lazzaro and CP2K developers group.
 (C) 2011-2014 Valery Weber, Urban Borstnik, Andreas Gloess and CP2K developers group.
 (C) 2010-2011 Valery Weber, Urban Borstnik, and CP2K developers group.
 Licensed under the GNU Public Licence v2 and v3.
@@ -9,8 +10,8 @@ Performance:
 
 * Building: compile libdbcsr as usual but use the 'dbcsr_performance_driver' target, i.e.:
 
-  user@host:/dir> cd $LIBDBCSR_HOME
-  user@host:/dir> make -j dbcsr_performance_driver
+  > cd $LIBDBCSR_HOME
+  > make -j dbcsr_performance_driver
 
 * Running, examples:
 
@@ -19,9 +20,9 @@ Performance:
 
   a) To test pure MPI performance test using [n] nodes:
 
-  user@host:/dir> mpiexec -np [n] ../../exe/Linux-x86-64-gfortran/dbcsr_performance_driver.popt < perf/test.perf 2>&1 | tee perf.log
+  > mpirun -np [n] ../bin/dbcsr_performance_driver.x < test.perf 2>&1 | tee perf.log
 
   b) To test hybrid MPI/OpenMP performance test using [n] nodes, each spanning [t] threads:
 
-  user@host:/dir> export OMP_NUM_THREADS=[t]; mpiexec -np [n] ../../exe/Linux-x86-64-gfortran/dbcsr_performance_driver.psmp < perf/test.perf 2>&1 | tee perf.log
+  > export OMP_NUM_THREADS=[t]; mpiexec -np [n] ../bin/dbcsr_performance_driver.x < test.perf 2>&1 | tee perf.log
 
