--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Alfio Lazzaro <alazzaro@cp2k.org>
+Alfio Lazzaro <alfio.lazzaro@gmail.com>
 Andreas Gloeß <agloess@cp2k.org>
 Christian Pousa <pousa@cp2k.org>
 Dorothea Golze <dorotheagolze@cp2k.org>
@@ -7,17 +7,19 @@ Florian Schiffmann <fschiff@cp2k.org>
 Harald Forbert <hforbert@cp2k.org>
 H. Bani-Hashemian <hbani@cp2k.org>
 Iain Bethune <ibethune@cp2k.org>
+Ilia Sivkov <ilia.sivkov@chem.uzh.ch>
 Jan Wilhelm <jwilhelm@cp2k.org>
-Joost VandeVondele <vondele@cp2k.org>
-Juerg Hutter <jhutter@cp2k.org>
+Joost VandeVondele <joost.vandevondele@cscs.ch>
+Juerg Hutter <hutter@chem.uzh.ch>
 Lianheng Tong <ltong@cp2k.org>
 Marcella Mauri-Iannuzzi <marcella@cp2k.org>
 Matthias Krack <mkrack@cp2k.org>
 Nico Holmberg <nholmberg@cp2k.org>
-Ole Schuett <oschuett@cp2k.org>
+Ole Schuett <ole.schuett@cp2k.org>
 Patrick Seewald <pseewald@cp2k.org>
 Samuel Andermatt <sandermatt@cp2k.org>
 Sergey Chulkov <schulkov@cp2k.org>
+Shoshana Alice Jakobovits <jakobovits@cscs.ch>
 Teodoro Laino <tlaino@cp2k.org>
 Thomas Chassaing <tchassai@cp2k.org>
 Urban Borstnik <uborstnik@cp2k.org>
