added my name to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ H. Bani-Hashemian <hbani@cp2k.org>
 Iain Bethune <ibethune@cp2k.org>
 Ilia Sivkov <ilia.sivkov@chem.uzh.ch>
 Jan Wilhelm <jwilhelm@cp2k.org>
+Joerg Kussmann <Joerg.Kussmann@cup.uni-muenchen.de>
 Joost VandeVondele <joost.vandevondele@cscs.ch>
 Juerg Hutter <hutter@chem.uzh.ch>
 Lianheng Tong <ltong@cp2k.org>
