--- a/tests/README
+++ b/tests/README
@@ -1,9 +1,13 @@
-DBCSR Testing and Performance
+!--------------------------------------------------------------------------------------------------!
+! Copyright (C) by the DBCSR developers group - All rights reserved                                !
+! This file is part of the DBCSR library.                                                          !
+!                                                                                                  !
+! For information on the license, see the LICENSE file.                                            !
+! For further information please visit https://dbcsr.cp2k.org                                      !
+! SPDX-License-Identifier: GPL-2.0+                                                                !
+!--------------------------------------------------------------------------------------------------!
 
-(C) 2015-2018 Valery Weber, Urban Borstnik, Andreas Gloess, Alfio Lazzaro and CP2K developers group.
-(C) 2011-2014 Valery Weber, Urban Borstnik, Andreas Gloess and CP2K developers group.
-(C) 2010-2011 Valery Weber, Urban Borstnik, and CP2K developers group.
-Licensed under the GNU Public Licence v2 and v3.
+DBCSR Testing and Performance
 
 Performance:
 ============
