libcusmm/notebooks: update feature for new graph

--- a/src/acc/libsmm_acc/libcusmm/notebooks/inspect_training_data.ipynb
+++ b/src/acc/libsmm_acc/libcusmm/notebooks/inspect_training_data.ipynb
@@ -330,15 +330,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature dependency graph \n",
+    "### Features\n",
     "\n",
-    "Features are grouped thematically \n",
-    "\n",
-    "* **green** kernel parameters\n",
-    "* **yellow** matrix sizes\n",
+    "Features in the left-most column correspond to \"raw\" parameters\n",
+    "* **green** kernel parameters \n",
+    "* **grey** CUDA card properties (taken from CUDA documentation) \n",
     "* **pink** autotuning parameters (taken from DBCSR codebase) \n",
-    "* **grey** CUDA card properties (taken from CUDA doc) \n",
-    "* **blue** kernel compilation information (output using `-Xptxas -v` option in `nvcc`). This information *may not be available* in the end-goal runtime"
+    "\n",
+    "Other features correspond to derived parameters, computed from the \"raw\" parameters\n",
+    "* **yellow** matrix sizes\n",
+    "* **light grey** launch parameters\n",
+    "* **blue** and **purple** estimations of resource usages"
    ]
   },
   {
