libcusmm/notebooks: reading from tuning folders: add comments

--- a/src/acc/libsmm_acc/libcusmm/notebooks/inspect_training_data.ipynb
+++ b/src/acc/libsmm_acc/libcusmm/notebooks/inspect_training_data.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# `libcusmm` explore training data"
+    "# `libcusmm`: Explore the Training Data"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ls -ad AUTOTUNING_DATA_PATH/tune_dataset/tune_*x*x*/"
+    "ls -ad AUTOTUNING_DATA_PATH/tune_*x*x*/"
    ]
   },
   {
@@ -67,7 +67,8 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ls -ad ~/scratch/tune_dataset/tune_*x*x*/ | wc -l "
+    "# Count tuning folders in path\n",
+    "ls -ad AUTOTUNING_DATA_PATH/tune_*x*x*/ | wc -l "
    ]
   },
   {
@@ -76,9 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "autotuning_data_path = '/users/alicej/scratch/tune_dataset'  # may not recognize '~', provide absolute complete paths\n",
-    "assert os.path.exists(autotuning_data_path)\n",
-    "assert len(os.listdir(autotuning_data_path)) > 0"
+    "# may not recognize '~', please provide an absolute path:\n",
+    "autotuning_data_path = ''\n",
+    "assert os.path.exists(autotuning_data_path),      \"This path does not exist: \" + autotuning_data_path  # sanity check\n",
+    "assert len(os.listdir(autotuning_data_path)) > 0, \"No folders found in path: \" + autotuning_data_path  # sanity check"
    ]
   },
   {
