libcusmm/notebooks: make more usable, port to dask

--- a/src/acc/libsmm_acc/libcusmm/notebooks/inspect_training_data.ipynb
+++ b/src/acc/libsmm_acc/libcusmm/notebooks/inspect_training_data.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import libraries"
+    "## Import libraries"
    ]
   },
   {
@@ -29,9 +29,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re, sys, os, json\n",
+    "import re, sys, os, json, random\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import dask.dataframe as dd\n",
+    "from nb_helper import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read training data from autotuning folders \n",
+    "\n",
+    "Read from files of form `tune_*x*x*/raw_training_data_*x*x*_algo.csv`. \n",
+    "If you want to read from aggregated Parquet files (recommended), skip to lower"
    ]
   },
   {
@@ -46,8 +58,7 @@
    "metadata": {},
    "source": [
     "Provide the path to the autotuning data:\n",
-    "- You can use the bash cell below to navigate your filetree. \n",
-    "- Then, copy what you've replaced `AUTOTUNING_DATA_PATH` with in the Python variable `autotuning_data_path` below"
+    "- You can use the bash cell below to navigate your filetree:"
    ]
   },
   {
@@ -61,14 +72,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%%bash\n",
-    "# Count tuning folders in path\n",
-    "ls -ad AUTOTUNING_DATA_PATH/tune_*x*x*/ | wc -l "
+    "- Then, copy what you've replaced `AUTOTUNING_DATA_PATH` with in the Python variable `autotuning_data_path` below:"
    ]
   },
   {
@@ -77,10 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# may not recognize '~', please provide an absolute path:\n",
-    "autotuning_data_path = ''\n",
-    "assert os.path.exists(autotuning_data_path),      \"This path does not exist: \" + autotuning_data_path  # sanity check\n",
-    "assert len(os.listdir(autotuning_data_path)) > 0, \"No folders found in path: \" + autotuning_data_path  # sanity check"
+    "autotuning_data_path = '' # may not recognize '~', please provide an absolute path:\n",
+    "check_autotuning_data_path(autotuning_data_path)"
    ]
   },
   {
@@ -111,50 +116,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kernel_folder_pattern = re.compile('tune_(\\d+)x(\\d+)x(\\d+)$')\n",
-    "\n",
+    "algorithm = get_algorithm_to_explore('all')   # algorithms to explore. Options: all, tiny, small, medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get the list of folders to read\n",
-    "if to_read == 'all':\n",
-    "    folders_to_read = [os.path.join(autotuning_data_path, f) for f in os.listdir(autotuning_data_path) \n",
-    "                       if kernel_folder_pattern.match(f) is not None]\n",
-    "elif isinstance(to_read, int):\n",
-    "    folders_to_read = [os.path.join(autotuning_data_path, f) for f in os.listdir(autotuning_data_path) \n",
-    "                       if kernel_folder_pattern.match(f) is not None]\n",
-    "    folders_to_read = folders_to_read[:to_read]\n",
-    "elif isinstance(to_read, str):\n",
-    "    to_read = re.compile(to_read)\n",
-    "    folders_to_read = [os.path.join(autotuning_data_path, f) for f in os.listdir(autotuning_data_path) \n",
-    "                       if to_read.match(f) is not None]    \n",
-    "else: \n",
-    "    assert False, \"Cannot recognize option: \" + to_read\n",
-    "\n",
-    "num_folders_to_read = len(folders_to_read)\n",
-    "assert num_folders_to_read > 0\n",
-    "print(\"Data folders to be read from (total: {:,})\\n\".format(num_folders_to_read))\n",
-    "[print(f) for f in folders_to_read]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "algorithm = 'all'   # algorithms to explore. Options: all, tiny, small, medium\n",
-    "                    #-------------------------------------------------------------------\n",
-    "algo_to_read = [algorithm] if algorithm != 'all' else ['tiny', 'small', 'medium', 'largeDB1', 'largeDB2']\n",
-    "print(\"Algorithm(s) to explore:\")\n",
-    "[print(a) for a in algo_to_read]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "thresh = 300000     # do not perform very long operations on row counts above this threshold\n",
-    "                    #-------------------------------------------------------------------"
+    "folders_to_read = get_folders_to_read(to_read, autotuning_data_path)"
    ]
   },
   {
@@ -170,8 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_list = list()\n",
-    "kernel_folder_pattern = re.compile('tune_(\\d+x\\d+x\\d+)$')"
+    "raw_files_to_read, derived_files_to_read = get_files_to_read(folders_to_read, algorithm)"
    ]
   },
   {
@@ -182,45 +153,96 @@
    },
    "outputs": [],
    "source": [
-    "for i, kernel_folder in enumerate(folders_to_read):\n",
-    "    print('\\nfrom {}, read                                  ({}/{:,})'.format(kernel_folder, i+1, num_folders_to_read))\n",
-    "        \n",
-    "    for name_algo in algo_to_read: \n",
-    "\n",
-    "        mnk_string = kernel_folder_pattern.search(kernel_folder).groups()[0]\n",
-    "        raw_file_base = 'raw_training_data_' + mnk_string + '_' + name_algo + '.csv'\n",
-    "        raw_file = os.path.join(kernel_folder, raw_file_base)\n",
-    "        derived_file_base = 'training_data_' + mnk_string + '_' + name_algo + '.csv'\n",
-    "        derived_file = os.path.join(kernel_folder, derived_file_base) \n",
-    "\n",
-    "        if os.path.exists(raw_file) and os.path.exists(derived_file):\n",
-    "\n",
-    "            # Read raw parameters file\n",
-    "            raw = pd.read_csv(raw_file, index_col=0)\n",
-    "            raw['algorithm'] = np.array([name_algo]*len(raw.index.values))\n",
-    "            print('\\t{:50} number of lines: {:>8,}'.format(raw_file_base, len(raw.index.values)))\n",
-    "\n",
-    "            # Read derived parameters file\n",
-    "            derived = pd.read_csv(derived_file, index_col=0)\n",
-    "            print('\\t{:50} number of lines: {:>8,}'.format(derived_file_base, len(raw.index.values)))\n",
-    "            dataframe_list.append(pd.concat([raw, derived], axis=1))\n",
-    "\n",
-    "        else: \n",
-    "            \n",
-    "            if not os.path.exists(raw_file):\n",
-    "                print('\\t...{:50} no file'.format(raw_file_base))\n",
-    "            if not os.path.exists(derived_file):\n",
-    "                print('\\t...{:50} no file'.format(derived_file_base))\n",
-    "            \n",
-    "print('Read all csv files, merging dataframes')\n",
-    "data = pd.concat(dataframe_list, ignore_index=True)\n",
-    "data.dropna(axis=1, how='all', inplace=True)"
+    "%%time\n",
+    "num_f = len(files_to_read)\n",
+    "data_raw = dd.read_csv(raw_files_to_read, dtype={}).set_index(\"Unnamed: 0\")\n",
+    "data_derived = dd.read_csv(derived_files_to_read, dtype={}).set_index(\"Unnamed: 0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge the two: "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Read training data from Parquet files\n",
+    "\n",
+    "Read from files of form `training_data_algorithm.parquet`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Path to autotuning data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Provide the path to the autotuning data:\n",
+    "- You can use the bash cell below to navigate your filetree:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "ls -ad AUTOTUNING_DATA_PATH/*.parquet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Then, copy what you've replaced `AUTOTUNING_DATA_PATH` with in the Python variable `training_data_path` below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data_path = '../tune_dataset_V100/' # may not recognize '~', please provide an absolute path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithm = \"small\" # algorithm to explore. Options: tiny, small, medium, largeDB1, largeDB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parquet_data_file = os.path.join(training_data_path, \"training_data_\" + algorithm + \".parquet\")\n",
+    "data = dd.read_parquet(parquet_data_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data inspection\n",
+    "\n",
     "### Data head"
    ]
   },
@@ -232,7 +254,6 @@
    },
    "outputs": [],
    "source": [
-    "page_width = 5 # columns per output line\n",
     "for i in range(0, len(data.columns.values), page_width):\n",
     "    display(data.iloc[:,i:i+page_width].head())"
    ]
@@ -250,10 +271,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "print('Data size        :', sys.getsizeof(data)/10**6, 'MB')\n",
     "print('Number of columns:', len(data.columns.values))\n",
-    "print('Number of rows   : {:,}'.format(len(data.index.values)))"
+    "print('Number of rows   : {:,}'.format(len(data.index)))"
    ]
   },
   {
@@ -264,8 +284,8 @@
    },
    "outputs": [],
    "source": [
-    "for i in range(0, len(data.columns.values), page_width):\n",
-    "    display(data.iloc[:,i:i+page_width].describe())"
+    "#for i in range(0, len(data.columns.values), page_width):\n",
+    "#    display(data.iloc[:,i:i+page_width].describe())"
    ]
   },
   {
@@ -283,7 +303,7 @@
    },
    "outputs": [],
    "source": [
-    "print('Number of columns:', len(data.columns), '\\nNumber of rows:', len(data.index.values), '\\n')\n",
+    "#print('Number of columns:', len(data.columns), '\\nNumber of rows:', len(data.index), '\\n')\n",
     "for col in data.columns: \n",
     "    print('{:<40} {}'.format(col, data[col].dtype))"
    ]
@@ -299,33 +319,9 @@
     "kernel_pars = ['algorithm', 'threads_per_blk', 'grouping', 'minblocks',\n",
     "               'tile_m', 'tile_n', 'w', 'v', 'nbytes_smem', 'nbytes_cmem', 'regs_per_thread']\n",
     "kernel_pars = list(set(kernel_pars) & set(data.columns.values))\n",
-    "perf =  ['perf (Gflop/s)', 'perf_squared', 'perf_scaled', 'perf_scaled_by_algo']\n",
+    "perf =  ['perf (Gflop/s)', 'perf_scaled']\n",
     "common = ['Gflops', 'mxnxk', 'size_a', 'size_b', 'size_c', 'nblks', \n",
     "          'warps_per_blk', 'nwarps', 'sm_desired', 'nthreads', 'ru_param_stack_unroll_factor']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sample row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "other_columns = list(set(data.columns.values) - set(kernel_pars + mnk + perf + common))\n",
-    "irow = 0#random.sample(range(len(data.index.values)), 1)[0]\n",
-    "row = data.iloc[irow,:]\n",
-    "print(row[mnk], '\\n')\n",
-    "print(row[kernel_pars], '\\n')\n",
-    "print(row[perf], '\\n')\n",
-    "print(row[common], '\\n')\n",
-    "print(row[other_columns], '\\n')"
    ]
   },
   {
@@ -355,18 +351,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thresh = 300000     # do not perform very long operations on row counts above this threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "data_profiling = data\n",
-    "if len(data.index.values) > thresh:  # if it is a very large dataframe, perform op on subsampled rows \n",
-    "    sampled_rows = random.sample(data_profiling.index.values.tolist(), thresh)\n",
-    "    data_profiling = data.iloc[sampled_rows,:]\n",
+    "data_to_profile = data\n",
+    "n_rows_data = len(data)\n",
+    "if n_rows_data > thresh:  # if it is a very large dataframe, perform op on subsampled rows\n",
+    "    data_to_profile = data.sample(frac = thresh / n_rows_data)\n",
     "\n",
     "import pandas_profiling \n",
-    "pandas_profiling.ProfileReport(data_profiling)"
+    "pandas_profiling.ProfileReport(data_to_profile.compute())"
    ]
   },
   {
@@ -394,9 +399,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.semilogx(data['mxnxk'], data['perf (Gflop/s)'], '.', markersize=1)\n",
-    "plt.xlabel('Training (m, n, k) triplets (in order of increasing m*n*k)')\n",
-    "plt.ylabel('Performance [Gflops]')"
+    "# Get Series from Dask to Pandas\n",
+    "data_mxnxk = data['mxnxk'].compute()\n",
+    "data_perf = data['perf (Gflop/s)'].compute()\n",
+    "data_perf_scaled = data['perf_scaled'].compute()"
    ]
   },
   {
@@ -405,9 +411,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.semilogx(data['mxnxk'], data['perf_squared'], '.', markersize=1)\n",
+    "plt.semilogx(data_mxnxk, data_perf, '.', markersize=1)\n",
     "plt.xlabel('Training (m, n, k) triplets (in order of increasing m*n*k)')\n",
-    "plt.ylabel('Performance squared [Gflops]^2')"
+    "plt.ylabel('Performance [Gflops]')"
    ]
   },
   {
@@ -423,28 +429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(data['mxnxk'], data['perf_scaled'], '.', markersize=1)\n",
+    "plt.plot(data_mxnxk, data_perf_scaled, '.', markersize=1)\n",
     "plt.xlabel('Training (m, n, k) triplets (in order of increasing m*n*k)')\n",
     "plt.ylabel('Performance scaled (overall)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "algos = np.unique(data['algorithm'])\n",
-    "for algo in algos:\n",
-    "    algo_data = data[data['algorithm'] == algo]\n",
-    "    plt.figure()\n",
-    "    plt.semilogx(algo_data['mxnxk'], algo_data['perf_scaled_by_algo'], '.', markersize=1)\n",
-    "    plt.xlabel('Training (m, n, k) triplets (in order of increasing m*n*k)')\n",
-    "    plt.ylabel('Performance scaled (by algorithm)')\n",
-    "    plt.title(algo)\n",
-    "    plt.show()"
    ]
   },
   {
@@ -472,7 +459,7 @@
    "source": [
     "data_mnk = data[data['m'] == m_plot][ \n",
     "                data['n'] == n_plot][ \n",
-    "                data['k'] == k_plot]\n",
+    "                data['k'] == k_plot].compute()\n",
     "data_mnk.sort_values(by='perf (Gflop/s)', ascending=True, inplace=True)\n",
     "plt.plot(data_mnk['perf (Gflop/s)'].values)\n",
     "plt.xlabel('parameter set')\n",
@@ -588,11 +575,11 @@
    "outputs": [],
    "source": [
     "data_pairplot = data\n",
-    "if len(data.index.values) > thresh:  # if it is a very large dataframe, perform op on subsampled rows \n",
-    "    sampled_rows = random.sample(data_pairplot.index.values.tolist(), thresh)\n",
-    "    data_pairplot = data.iloc[sampled_rows,:]\n",
+    "n_rows_data = len(data)\n",
+    "if n_rows_data > thresh:  # if it is a very large dataframe, perform op on subsampled rows\n",
+    "    data_pairplot = data.sample(frac = thresh / n_rows_data)\n",
     "\n",
-    "sns.pairplot(data_pairplot[mnk + kernel_pars + perf].dropna())"
+    "sns.pairplot(data_pairplot[mnk + kernel_pars + perf].compute().dropna())"
    ]
   }
  ],
