Rename libsmm -> libsmm_acc, cuda -> GPU and minor fixes
- Update notebook texts
- cmake: add AMD Mi50
- Improve error detection and message in predict helper function

--- a/src/acc/libsmm_acc/notebooks/inspect_training_data.ipynb
+++ b/src/acc/libsmm_acc/notebooks/inspect_training_data.ipynb
@@ -332,7 +332,7 @@
     "\n",
     "Features in the left-most column correspond to \"raw\" parameters\n",
     "* **green** kernel parameters \n",
-    "* **grey** CUDA card properties (taken from CUDA documentation) \n",
+    "* **grey** GPU card properties (taken from Nvidia/AMD documentation) \n",
     "* **pink** autotuning parameters (taken from DBCSR codebase) \n",
     "\n",
     "Other features correspond to derived parameters, computed from the \"raw\" parameters\n",
