docs: move images and logo to docs/media

--- a/src/acc/libsmm_acc/notebooks/inspect_training_data.ipynb
+++ b/src/acc/libsmm_acc/notebooks/inspect_training_data.ipynb
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![parameters dependency graph](libsmm_acc_predictive_modeling_features.png)"
+    "![parameters dependency graph](../../../../docs/media/images/libsmm_acc_predictive_modeling_features.png)"
    ]
   },
   {
