Update Authors. Update PACKAGE.

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Juerg Hutter <hutter@chem.uzh.ch>
 Lianheng Tong <ltong@cp2k.org>
 Marcella Mauri-Iannuzzi <marcella@cp2k.org>
 Matthias Krack <mkrack@cp2k.org>
+Maximilien Ambroise <maximilien.ambroise@gmail.com>
 Nico Holmberg <nholmberg@cp2k.org>
 Ole Schuett <ole.schuett@cp2k.org>
 Patrick Seewald <pseewald@cp2k.org>
