Add Mi100 support

--- a/src/acc/libsmm_acc/notebooks/inspect_autotuned_parameters.ipynb
+++ b/src/acc/libsmm_acc/notebooks/inspect_autotuned_parameters.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GPU = 'P100' # Options: K20X, K40, K80, P100, V100, Mi50"
+    "GPU = 'P100' # Options: K20X, K40, K80, P100, V100, Mi50, Mi100"
    ]
   },
   {
